# stratum

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.github/: FUNDING.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: ci.yml  dco.yml  docs.yml  release.yml
.omo/run-continuation/: ses_075fc8461ffe5GzTbYNMEDKjcl.json  ses_075fddaafffeN5qnMbsCPpcygS.json  ses_075fdeeefffem5Ft7JskMcTUje.json  ses_075fdf4bbffebn7ULRWg7gFqEV.json  ses_075fdfac3ffes1OaapU7ZHteyf.json  ses_075fe0168ffev93sx55pIKhZ88.json  ses_075fe27f6ffeWulZn9eysWRjb3.json
crates/pkm-ai/: Cargo.toml
crates/pkm-ai/src/: embedding.rs  lib.rs  provider.rs  rag.rs  research.rs
crates/pkm-block/: Cargo.toml
crates/pkm-block/src/: block.rs  lib.rs  ops.rs  page.rs  store.rs  tree.rs
crates/pkm-cli/: Cargo.toml
crates/pkm-cli/src/: main.rs
crates/pkm-core/: Cargo.toml
crates/pkm-core/src/: config.rs  endpoint.rs  error.rs  fs_util.rs  lib.rs  note.rs  types.rs  validation.rs
crates/pkm-frontend/: Cargo.toml
crates/pkm-frontend/src/: api.rs  types.rs
crates/pkm-index/: Cargo.toml
crates/pkm-index/src/: block_graph.rs  block_search.rs  graph.rs  indexer.rs  lib.rs  rebuild.rs  related.rs  search.rs  tags.rs
crates/pkm-markdown/: Cargo.toml
crates/pkm-markdown/src/: block_parser.rs  code_block.rs  lib.rs  linker.rs  parser.rs  renderer.rs  tagger.rs
crates/pkm-plugin/: Cargo.toml
crates/pkm-plugin/src/: lib.rs  permissions.rs  registry.rs  runtime.rs
crates/pkm-query/: Cargo.toml
crates/pkm-query/src/: compiler.rs  engine.rs  lib.rs  parser.rs
crates/pkm-sync/: Cargo.toml
crates/pkm-sync/src/: auto_commit.rs  conflict.rs  git.rs  lib.rs  scheduler.rs
crates/pkm-watcher/: Cargo.toml
crates/pkm-watcher/src/: lib.rs  watcher.rs
docs/: 404.html  USAGE.md  architecture.md  contributing.md  hooks.py  index.html  index.md  master-plan.md  mkdocs.yml  sitemap.xml
docs/advanced/: file-format.md  plugins.md
docs/advanced/file-format/: index.html
docs/advanced/plugins/: index.html
docs/cli/: command-reference.md
docs/cli/command-reference/: index.html
docs/contributing/: index.html
docs/development/: frontend-guide.md  mobile-guide.md  rust-guide.md
docs/development/frontend-guide/: index.html
docs/development/mobile-guide/: index.html
docs/development/rust-guide/: index.html
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/getting-started/configuration/: index.html
docs/getting-started/installation/: index.html
docs/getting-started/quickstart/: index.html
docs/guide/: ai-features.md  block-editor.md  datalog-queries.md  diagrams.md  export.md  flashcards.md  git-sync.md  graph-view.md  journal.md  kanban.md  linking-and-backlinks.md  math-equations.md  search.md  tags.md  tasks.md  templates.md  vault-management.md  web-research.md  whiteboards.md
docs/guide/ai-features/: index.html
docs/guide/block-editor/: index.html
docs/guide/datalog-queries/: index.html
docs/guide/diagrams/: index.html
docs/guide/export/: index.html
docs/guide/flashcards/: index.html
docs/guide/git-sync/: index.html
docs/guide/graph-view/: index.html
docs/guide/journal/: index.html
docs/guide/kanban/: index.html
docs/guide/linking-and-backlinks/: index.html
docs/guide/math-equations/: index.html
docs/guide/search/: index.html
docs/guide/tags/: index.html
docs/guide/tasks/: index.html
docs/guide/templates/: index.html
docs/guide/vault-management/: index.html
docs/guide/web-research/: index.html
docs/guide/whiteboards/: index.html
docs/landing/: index.html
docs/search/: search_index.json
frontend/: README.md  pubspec.yaml
frontend/android/: local.properties
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/lib/: main.dart
frontend/lib/models/: config.dart  graph.dart  note.dart
frontend/lib/providers/: search_provider.dart  settings_provider.dart  sync_provider.dart  vault_provider.dart
frontend/lib/screens/: editor_screen.dart  graph_screen.dart  (+4 more)
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
nix/: flake.nix
scripts/: build.sh  release.sh  setup.sh  test.sh
site/: 404.html  index.html  sitemap.xml
site/contributing/: index.html
site/search/: search_index.json
src/: App.tsx  global.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android-patches/: debug.keystore  tauri.build.gradle.kts
src-tauri/android-patches/app/: build.gradle.kts  proguard-rules.pro
src-tauri/android-patches/app/src/main/: AndroidManifest.xml
src-tauri/android-patches/app/src/main/java/app/stratum/: MainActivity.kt
src-tauri/android-patches/app/src/main/res/values/: strings.xml  themes.xml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  block.rs  export.rs  flashcards.rs  graph.rs  kanban.rs  mod.rs  page.rs  query.rs  search.rs  settings.rs  sync.rs  template.rs  vault.rs  whiteboard.rs
src/components/: AIFormattingToolbar.tsx  AISlashMenu.tsx  AutocompletePopup.tsx  BacklinksPanel.tsx  BlockEditor.tsx  ErrorBoundary.tsx  FlashcardsPanel.tsx  GraphPanel.tsx  JournalCalendar.tsx  JournalPanel.tsx  KanbanEditDialog.tsx  KanbanPanel.tsx  LinkPreviewPopup.tsx  MarkerBadge.tsx  MathEditorModal.tsx  MathSymbolPalette.tsx  MermaidBlock.tsx  MobileLayout.tsx  MobileNav.tsx  OutlinerEditor.tsx  PageView.tsx  PagesHome.tsx  PropertiesPanel.tsx  QueryPanel.tsx  SearchPanel.tsx  SettingsPage.tsx  Sidebar.tsx  StratumIcon.tsx  SuggestedConnectionsPanel.tsx  TemplatesPanel.tsx  VaultPicker.tsx  WhiteboardPanel.tsx
src/lib/: commands.ts  libraryStore.ts  muiTheme.ts  platform.ts  theme.ts  types.ts  useCtrlHeld.ts  useMarkerDecorations.ts  useMathInline.tsx  wikiLinks.ts
src/stores/: appStore.ts  graphStore.ts  index.ts  settingsStore.ts  syncModalStore.ts  syncStore.ts
src/workers/: force-layout.worker.ts
(+119 files in other folders)
