[workspace]
resolver = "2"
members = [
    "crates/pkm-core",
    "crates/pkm-markdown",
    "crates/pkm-index",
    "crates/pkm-sync",
    "crates/pkm-watcher",
    "crates/pkm-ai",
    "crates/pkm-plugin",
    "crates/pkm-cli",
    "crates/pkm-block",
    "crates/pkm-query",
    "src-tauri",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/shortcircuit/stratum"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1"
glob = "0.3"
pulldown-cmark = { version = "0.12", features = ["simd"] }
toml = "0.8"
dirs = "5"
log = "0.4"

# Index
tantivy = "0.22"

# Sync
gix = { version = "0.85", features = ["comfort", "blocking-network-client", "credentials", "status", "worktree-mutation", "blob-diff"] }

# Watcher
notify = { version = "7", features = ["macos_fsevent"] }

# AI
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_with = "3"

# Plugin
wasmtime = "26"

# Frontend
flutter_rust_bridge = "2"

# Block storage
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Dev
tempfile = "3"
rstest = "0.23"
mockall = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1"
test-log = "0.2"
futures = "0.3"
rand = "0.8"
url = "2"
