[package]
name = "stratum-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stratum PKM — Tauri desktop shell"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true
tokio.workspace = true
pkm-core = { path = "../crates/pkm-core" }
pkm-block = { path = "../crates/pkm-block" }
pkm-markdown = { path = "../crates/pkm-markdown" }
pkm-index = { path = "../crates/pkm-index" }
pkm-query = { path = "../crates/pkm-query" }
pkm-sync = { path = "../crates/pkm-sync" }
pkm-ai = { path = "../crates/pkm-ai" }
pkm-watcher = { path = "../crates/pkm-watcher" }
pulldown-cmark.workspace = true
reqwest.workspace = true
gix.workspace = true
dirs.workspace = true
tauri-plugin-android-fs = "28"
