[package]
name = "pkm-block"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# pkm-core for shared types (config, error, types)
pkm-core = { path = "../pkm-core" }

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
