[package]
name = "pkm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stratum"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
pkm-core = { path = "../pkm-core" }
pkm-markdown = { path = "../pkm-markdown" }
pkm-index = { path = "../pkm-index" }
pkm-sync = { path = "../pkm-sync" }
pkm-watcher = { path = "../pkm-watcher" }
pkm-ai = { path = "../pkm-ai" }
pkm-plugin = { path = "../pkm-plugin" }
git2 = "0.19"
