[package]
name = "pkm-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pkm-core = { path = "../pkm-core" }
pkm-block = { path = "../pkm-block" }
pulldown-cmark.workspace = true
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
