[package]
name = "pkm-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmtime.workspace = true
anyhow.workspace = true
pkm-core = { path = "../pkm-core" }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
