[package]
name = "pkm-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
git2.workspace = true
pkm-core = { path = "../pkm-core" }
pkm-markdown = { path = "../pkm-markdown" }

[dev-dependencies]
tempfile.workspace = true
