[package]
name = "pkm-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
notify.workspace = true
crossbeam-channel = "0.5"
pkm-core = { path = "../pkm-core" }
pkm-markdown = { path = "../pkm-markdown" }
pkm-index = { path = "../pkm-index" }
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
